Added more models, and supervisor theme.

--- a/CruzadaSite/Cruzada/templates/supervisor.html
+++ b/CruzadaSite/Cruzada/templates/supervisor.html
@@ -1,2 +1,5 @@
 {% include 'base.html' %}
 
+{% block pageLevelStyle   %}
+    <link href="{{ STATIC_URL }}css/colors/color-dark.css" rel="stylesheet">
+{% endblock pageLevelStyle %}
