Added more models, and supervisor theme.

--- a/CruzadaSite/Cruzada/templates/base.html
+++ b/CruzadaSite/Cruzada/templates/base.html
@@ -18,7 +18,6 @@
     <link href="{{ STATIC_URL }}css/plugins.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}plugins/bootstrap-loading/lada.min.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/style.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/colors/color-blue.css" rel="stylesheet">
     <!-- END  MANDATORY STYLE -->
 
         <!-- BEGIN PAGE LEVEL STYLE -->
@@ -46,7 +45,7 @@
                 </a>
                 {% comment %}<a class="navbar-brand" href="{% url 'home' %}"></a>{% endcomment %}
             </div>
-            <div class="navbar-center">Gadberry Group ::: Admin Console</div>
+            <div class="navbar-center">Emanuel Pereyra ::: Sistema Cruzada</div>
             <div class="navbar-collapse collapse">
                 <!-- BEGIN TOP NAVIGATION MENU -->
                 <ul class="nav navbar-nav pull-right header-menu">
