--- a/CruzadaSite/Cruzada/templates/supervisor.html
+++ b/CruzadaSite/Cruzada/templates/supervisor.html
@@ -1,5 +1,15 @@
-{% include 'base.html' %}
+{% extends 'base.html' %}
 
 {% block pageLevelStyle   %}
     <link href="{{ STATIC_URL }}css/colors/color-dark.css" rel="stylesheet">
 {% endblock pageLevelStyle %}
+
+
+{% block content %}
+
+{% endblock content %}
+
+
+{% block pageLevelScripts %}
+
+{% endblock pageLevelScripts %}
