Added more screens, fixed some bugs.

--- a/CruzadaSite/Cruzada/templates/productos.html
+++ b/CruzadaSite/Cruzada/templates/productos.html
@@ -2,6 +2,8 @@
 
 {% block pageLevelStyle   %}
 <link href="{{ STATIC_URL }}css/colors/color-red.css" rel="stylesheet">
+<link rel="stylesheet" href="{{ STATIC_URL }}plugins/datatables/dataTables.css">
+<link rel="stylesheet" href="{{ STATIC_URL }}plugins/datatables/dataTables.tableTools.css">
 {% endblock pageLevelStyle %}
 
 
