Online search modal. Home dashboard

--- a/CruzadaSite/Cruzada/templates/articulos.html
+++ b/CruzadaSite/Cruzada/templates/articulos.html
@@ -16,10 +16,10 @@
 <div id="main-content">
             <div class="m-b-20 clearfix">
                 <div class="page-title pull-left">
-                    <h3 class="pull-left"><strong>Gestionar Productos</strong></h3>
+                    <h3 class="pull-left"><strong>Gestionar Artículos</strong></h3>
                 </div>
                  <div class="pull-right">
-                    <a href="ecommerce_product_view.html" class="btn btn-success m-t-10"><i class="fa fa-plus p-r-10"></i> Agregue un producto</a>
+                    <a href="ecommerce_product_view.html" class="btn btn-success m-t-10"><i class="fa fa-plus p-r-10"></i>Agreguar un artículo</a>
                 </div>
             </div>
             <div class="row">
@@ -32,7 +32,7 @@
                                         <thead>
                                             <tr>
                                                 <th style="min-width:70px"><strong>Codigo</strong>
-                                                <th><strong>Producto</strong>
+                                                <th><strong>Artículo</strong>
                                                 </th>
                                                 <th><strong>Talle</strong>
                                                 </th>
