--- a/CruzadaSite/Cruzada/templates/base.html
+++ b/CruzadaSite/Cruzada/templates/base.html
@@ -85,8 +85,53 @@
         <nav id="sidebar">
             <div id="main-menu">
                 <ul class="sidebar-nav">
+                    {% if home %}
                     <li class="current">
-                        <a href="#"><i class="fa fa-home"></i><span class="sidebar-text">Dashboard</span></a>
+                    {% else %}
+                    <li>
+                    {% endif %}
+                        <a href="{% url 'home' %}"><i class="fa fa-home"></i><span class="sidebar-text">Dashboard</span></a>
+                    </li>
+                    {% if ventas %}
+                    <li class="active current hasSub">
+                    {% else %}
+                    <li>
+                    {% endif %}
+                        <a href="#"><i class="glyph-icon flaticon-shopping80"></i><span class="sidebar-text">Ventas</span>
+                        <span class="fa arrow"></span></a>
+                        <ul class="submenu collapse">
+                            {% if nueva_venta %}
+                            <li class="current">
+                            {% else %}
+                            <li>
+                            {% endif %}
+                                <a href="{% url 'venta' %}"><span class="sidebar-text">Nueva Venta</span></a>
+                            </li>
+                        </ul>
+                    </li>
+                    {% if articulos %}
+                    <li class="active current hasSub">
+                    {% else %}
+                    <li>
+                    {% endif %}
+                        <a href="#"><i class="fa fa-list"></i><span class="sidebar-text">Artículos</span>
+                        <span class="fa arrow"></span></a>
+                        <ul class="submenu collapse">
+                            {% if b_lista_articulos %}
+                            <li class="current">
+                            {% else %}
+                            <li>
+                            {% endif %}
+                                <a href="{% url 'lista_articulos' %}"><span class="sidebar-text">Lista Artículos</span></a>
+                            </li>
+                            {% if nuevo_articulo %}
+                            <li class="current">
+                            {% else %}
+                            <li>
+                            {% endif %}
+                                <a href="#"><span class="sidebar-text">Nuevo Artículo</span></a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -102,7 +147,7 @@
     <!-- END WRAPPER -->
 
     <!-- BEGIN MANDATORY SCRIPTS -->
-
+    <script src="{{ STATIC_URL }}plugins/mandatoryJs.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}plugins/jquery-1.11.js"></script>
     <script src="{{ STATIC_URL }}plugins/jquery-migrate-1.2.1.js"></script>
     <script src="{{ STATIC_URL }}plugins/jquery-ui/jquery-ui-1.10.4.min.js"></script>
@@ -117,6 +162,7 @@
     <script src="{{ STATIC_URL }}plugins/breakpoints/breakpoints.js"></script>
     <script src="{{ STATIC_URL }}plugins/numerator/jquery-numerator.js"></script>
     <script src="{{ STATIC_URL }}plugins/jquery.cookie.min.js" type="text/javascript"></script>
+
 
     <!-- END MANDATORY SCRIPTS -->
         <script>
