--- a/CruzadaSite/Cruzada/templates/articulos.html
+++ b/CruzadaSite/Cruzada/templates/articulos.html
@@ -19,7 +19,7 @@
                     <h3 class="pull-left"><strong>Gestionar Artículos</strong></h3>
                 </div>
                  <div class="pull-right">
-                    <a href="ecommerce_product_view.html" class="btn btn-success m-t-10"><i class="fa fa-plus p-r-10"></i>Agreguar un artículo</a>
+                    <a href="ecommerce_product_view.html" class="btn btn-success m-t-10"><i class="fa fa-plus p-r-10"></i>Agregar un artículo</a>
                 </div>
             </div>
             <div class="row">
