--- a/CruzadaSite/Cruzada/templates/base.html
+++ b/CruzadaSite/Cruzada/templates/base.html
@@ -14,9 +14,9 @@
     <!-- END META SECTION -->
     <!-- BEGIN MANDATORY STYLE -->
     <link href="{{ STATIC_URL }}css/icons/icons.min.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/plugins.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/style.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/plugins.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/style.min.css" rel="stylesheet">
     <!-- END  MANDATORY STYLE -->
 
         <!-- BEGIN PAGE LEVEL STYLE -->
@@ -147,7 +147,7 @@
     <!-- END WRAPPER -->
 
     <!-- BEGIN MANDATORY SCRIPTS -->
-    <script src="{{ STATIC_URL }}plugins/mandatoryJs.min.js" type="text/javascript"></script>
+{#    <script src="{{ STATIC_URL }}plugins/mandatoryJs.min.js" type="text/javascript"></script>#}
     <script src="{{ STATIC_URL }}plugins/jquery-1.11.js"></script>
     <script src="{{ STATIC_URL }}plugins/jquery-migrate-1.2.1.js"></script>
     <script src="{{ STATIC_URL }}plugins/jquery-ui/jquery-ui-1.10.4.min.js"></script>
