--- a/CruzadaSite/Cruzada/templates/includes/busquedaOnlineModal.html
+++ b/CruzadaSite/Cruzada/templates/includes/busquedaOnlineModal.html
@@ -1,55 +1,30 @@
 <div class="modal fade" id="modal-online" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title"><strong>Busqueda en otra sucursal</strong></h4>
+                <h4 class="modal-title"><strong>Artículo disponible en la siguientes sucursales</strong></h4>
             </div>
             <div class="modal-body">
-                <div class="cWrapper">
-                    <div class="row">
-                        <table id="products-table" class="table">
-                            <thead>
-                                <tr>
-                                    <th><strong>Sucursal</strong>
-                                    </th>
-                                    <th><strong>Stock</strong>
-                                    </th>
-                                    <th><strong>Accion</strong>
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Libertad</td>
-                                    <td class="color-success">
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-success" data-aria-valuetransitiongoal="75">2654</div>
-                                        </div>
-                                    </td>
-                                    <td class="text-center ">
-                                        <a href="#" class="edit btn btn-sm btn-default"><i class="fa fa-envelope"></i>Pedir</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Gran Via</td>
-                                    <td class="color-success">
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-success" data-aria-valuetransitiongoal="75">2654</div>
-                                        </div>
-                                    </td>
-                                    <td class="text-center ">
-                                        <a href="#" class="edit btn btn-sm btn-default"><i class="fa fa-envelope"></i>Pedir</a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label>
+                                <input type="radio" name="sucursal">Libertad
+                            </label>
+                            <label>
+                                <input type="radio" name="sucursal">Gran Via
+                            </label>
+                            <label>
+                                <input type="radio" name="sucursal">Planeta
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="modal-footer text-center">
-                <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Guardar</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-minus"></i> Cancelar</button>
+                <button type="submit" class="btn btn-primary"><i class="fa fa-envelope"></i> Pedir Artículo</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-ban"></i> Cancelar</button>
             </div>
         </div>
     </div>
